yaml/mysql.svc.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: storage-mysql
spec: 
  ports:
  - port: 3306
    targetPort: 3306
  selector: 
    app: storage-mysql
