yaml/storage.svc.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: storage-node
spec: 
  ports:
  - port: 8088
    targetPort: 8088
  selector: 
    app: storage-node
