yaml/storage.stage.ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: storage-node-stage
spec: 
  rules: 
  - host: storage-stage.keepwork.com
    http: 
      paths:
      - path: 
        backend:
          serviceName: storage-node-stage
          servicePort: 8088
